navbar instal mui

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,4 +1,9 @@
 @import './vars.scss';
 .footer{
+    position: absolute;
     background-color: chartreuse;
+    border: solid blue 4px;
+    height:14vh;
+    width: 100vw;
+    bottom: 0;
 }
