--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,5 +1,9 @@
 @import './vars.scss';
-.navbar{
-    background-color: rgba(187, 143, 228, 0.929);
-    height:7vh;
+
+.navbar {
+    height: 100%;
+    width: 100%;
+}
+.logo{
+    color: $color-4;
 }
