--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,9 +1,7 @@
 @import './vars.scss';
 
 .navbar {
-    height: 100%;
-    width: 100%;
 }
 .logo{
-    color: $color-4;
-}
+    color: #14402e79;
+} 
